copy: clarify drops can be used

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>連庭 / RENTEI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css?v=1217a" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="app-header">
@@ -59,7 +59,7 @@
       <details class="details">
         <summary>折りたたみを開く</summary>
         <p class="section-desc" style="margin-top:0.6rem;">
-          参加が少しずつ積み重なると、関われる範囲も自然と広がっていきます。
+          参加が少しずつ積み重なると、水滴として溜まり、参加の幅を広げるための権利と交換できます。
         </p>
 
         <div id="rights-list" class="card-list">
