update: index page

--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
       <a class="link-soft" href="#section-now">→ 私の痕跡を見る</a>
     </section>
 
-    <!-- 2) いま、近くで起きていること -->
+    <!-- 2) 力を貸して！ -->
     <section id="section-now" class="section">
-      <h2>いま、近くで起きていること</h2>
+      <h2>力を貸して！</h2>
       <p class="section-desc">
-        「できること」を選ぶだけ。無理のない範囲で大丈夫です。
       </p>
 
       <div id="task-list" class="card-list">
@@ -53,9 +52,9 @@
       </div>
     </section>
 
-    <!-- 3) 水滴はどこへ？（折りたたみ） -->
+    <!-- 3) まちに出よう！（折りたたみ） -->
     <section id="section-where" class="section">
-      <h2>この水滴は、どこへ行く？</h2>
+      <h2>まちに出よう！</h2>
       <details class="details">
         <summary>折りたたみを開く</summary>
         <p class="section-desc" style="margin-top:0.6rem;">
@@ -68,11 +67,11 @@
       </details>
     </section>
 
-    <!-- 4) 商店街も関わっている（ユーザー向けの説明） -->
+    <!-- 4) こんな活動が起きています。 -->
     <section id="section-shops" class="section">
-      <h2>商店街も、関わっています</h2>
+      <h2>こんな活動が起きています。</h2>
       <p class="section-desc">
-        商店も水滴を使って支援を受け、また街に小さなきっかけを返していきます。
+        商店も水滴を交換して支援を受け、また街に小さなきっかけを返していきます。
       </p>
 
       <div id="shop-list" class="card-list">
@@ -124,6 +123,6 @@
 
   </div>
 
-  <script src="script.js"></script>
+ <script src="script.js?v=1218a"></script>
 </body>
 </html>
