update: index page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <details class="details">
         <summary>折りたたみを開く</summary>
         <p class="section-desc" style="margin-top:0.6rem;">
-          参加が少しずつ積み重なると、水滴として溜まり、参加の幅を広げるための権利と交換できます。
+          水滴が溜まったら、次の活動に使えてみよう。
         </p>
 
         <div id="rights-list" class="card-list">
